# SimpAI_Studio

./: .gitignore  README.md  args_manager.py  build_launcher.py  entry_with_update.py  launch.py  model_checker.py  requirements.txt  shared.py  simpleai_update.py  start.sh  webui-forge-neo.py  webui.py
comfy/custom_nodes/ComfyUI-Danbooru-Gallery/: LICENSE  README.md  __init__.py  package-lock.json  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-Danbooru-Gallery/docs/: LOGGING.md
comfy/custom_nodes/ComfyUI-Danbooru-Gallery/krita_files/: open_in_krita.desktop
comfy/custom_nodes/ComfyUI-Danbooru-Gallery/py/: __init__.py
comfy/custom_nodes/ComfyUI-Danbooru-Gallery/tools/: README.md  debug_metadata.py  force_delete_db.py  migrate_debug_print.py  migrate_print.py  replace_console_to_logger.py  test_db_health.py
comfy/custom_nodes/ComfyUI-HunyuanVideo_Foley/: README.md  __init__.py  download_models.py  hunyuan_foley.py  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-HunyuanVideo_Foley/example_workflows/: Hunyuan-Foley.json
comfy/custom_nodes/ComfyUI-MelBandRoFormer/: nodes.py  pyproject.toml  readme.md  requirements.txt
comfy/custom_nodes/ComfyUI-MelBandRoFormer/example_workflows/: melband_example.json
comfy/custom_nodes/ComfyUI-SCAIL-Pose/: nodes.py  pyproject.toml  readme.md  requirements.txt
comfy/custom_nodes/ComfyUI-SCAIL-Pose/example_workflows/: SCAIL_preprocess_example_01.json
comfy/custom_nodes/ComfyUI-SDPose-OOD/: README-ZH.md  README.md  __init__.py  generate_empty_embedding.py  pyproject.toml  requirements.txt  sdpose_ood_nodes.py
comfy/custom_nodes/ComfyUI-SDPose-OOD/models/: __init__.py
comfy/custom_nodes/ComfyUI-SDPose-OOD/pipelines/: SDPose_D_Pipeline.py  __init__.py
comfy/custom_nodes/ComfyUI-SDPose-OOD/utils/: __init__.py
comfy/custom_nodes/ComfyUI-SDPose-OOD/workflow/: sdpose_ood.json
comfy/custom_nodes/ComfyUI-Sharp/: LICENSE  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  install.py  prestartup_script.py  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-Sharp/nodes/: __init__.py  align_depth_maps.py  comfy-env.toml  load_image_exif.py  load_model.py  merge_gaussians.py  predict.py  predict_depth.py  project_depth_to_panorama.py  sample_panorama.py
comfy/custom_nodes/ComfyUI-Sharp/workflows/: pano.json  sharp_basic.json  sharp_exif.json
comfy/custom_nodes/ComfyUI-VFI/: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-VFI/examples/: interp.json
comfy/custom_nodes/ComfyUI-VFI/rife/: download_rife.py  rife_comfyui_wrapper.py
comfy/custom_nodes/ComfyUI-lhyNodes/: README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
comfy/custom_nodes/ComfyUI-lhyNodes/nodes/: file_nodes.py  morse_nodes.py  nodes.py
comfy/custom_nodes/ComfyUI-lhyNodes/utils/: human_visualization.py
comfy/custom_nodes/ComfyUI-lhyNodes/web/: batch_upload.js  colorWidget.js  preview.js  queue_handler.js  zip_uploader.js  zipper.js
comfy/custom_nodes/ComfyUI_Dynamic-RAMCache/: README.md  README_zh.md  __init__.py  nodes.py  pyproject.toml
comfy/custom_nodes/Comfyui-LayerForge/: CLONE.md  LAYERFORGE.md  README.md  __init__.py  canvas_node.py  css_test.html  pyproject.toml
comfy/custom_nodes/Comfyui-LayerForge/Doc/: ComfyApi  ComfyApp  LitegraphService  MaskEditor
comfy/custom_nodes/Comfyui-LayerForge/example_workflows/: LayerForge_flux_fill_inpaint_example.json  LayerForge_test_simple_workflow.json
comfy/custom_nodes/Comfyui-LayerForge/js/: BatchPreviewManager.js  Canvas.js  CanvasIO.js  CanvasInteractions.js  CanvasLayers.js  CanvasLayersPanel.js  CanvasRenderer.js  CanvasSelection.js  CanvasState.js  CanvasView.js  CustomShapeMenu.js  ErrorHandler.js  ImageCache.js  ImageReferenceManager.js  LayerForgeMaskEditor.js  MaskEditorIntegration.js  MaskTool.js  SAMDetectorIntegration.js  ShapeTool.js  db.js  logger.js  state-saver.worker.js
comfy/custom_nodes/Comfyui-LayerForge/python/: __init__.py  config.py  logger.py
comfy/custom_nodes/Comfyui-LayerForge/src/: BatchPreviewManager.ts  Canvas.ts  CanvasIO.ts  CanvasInteractions.ts  CanvasLayers.ts  CanvasLayersPanel.ts  CanvasRenderer.ts  CanvasSelection.ts  CanvasState.ts  CanvasView.ts  CustomShapeMenu.ts  ErrorHandler.ts  ImageCache.ts  ImageReferenceManager.ts  MaskEditorIntegration.ts  MaskTool.ts  SAMDetectorIntegration.ts  ShapeTool.ts  config.ts  db.ts  logger.ts  state-saver.worker.ts  types.ts
comfy/custom_nodes/Comfyui-SecNodes/: CHANGELOG.md  README.md  __init__.py  example_workflow.json  nodes.py  pyproject.toml  requirements.txt
comfy/custom_nodes/Comfyui-SecNodes/inference/: __init__.py  configuration_sec.py  modeling_sec.py  sam2_video_predictor.py
comfy/custom_nodes/Comfyui-SecNodes/model_config/: added_tokens.json  config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json
comfy/custom_nodes/Nvidia_RTX_Nodes_ComfyUI/: README.md  __init__.py  pyproject.toml
comfy/custom_nodes/Nvidia_RTX_Nodes_ComfyUI/example_workflows/: rtx_image_upscale.json  rtx_video_upscale.json
comfy/custom_nodes/WWAA-CustomNodes/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
comfy/custom_nodes/WWAA-CustomNodes/nodes/: __init__.py  image_nodes.py  math_nodes.py  text_nodes.py  utility_nodes.py  video_nodes.py
comfy/custom_nodes/WWAA-CustomNodes/web/: appearance.js  display_any.js  jpeg_preview.js  json_prompt_builder.js  text_file_browser.js
comfy/custom_nodes/WWAA-CustomNodes/workflow_examples/: Dither Node - Video Transform.json  Game Boy Style Demo.json  Nested Loop Node - Image Slicer.json  Simple Flux LoRA Captioning Workflow.json
comfy/custom_nodes/comfyui_scail2_multi_cond/: README.md  nodes.py  pyproject.toml
comfy/custom_nodes/comfyui_scail2_multi_cond/workflow/: SCAIL2_long_video_sample.json  SCAIL2_scheduled_long_video_template.json  comfyui_scail2_multi_cond_sample_external.json  comfyui_scail2_multi_cond_sample_internal.json
rust/danbooru-tags/: Cargo.toml
rust/danbooru-tags/src/: main.rs
(+1460 files in other folders)
