[package]
name = "simpai-danbooru-tags"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SimpAI first-party Danbooru tag lookup CLI"

[[bin]]
name = "danbooru-tags"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
