[project]
name = "comfyui-danbooru-gallery"
version = "1.0.0"
description = "ComfyUI plugin for browsing and importing images from Danbooru"
authors = [{ name = "ComfyUI-Danbooru-Gallery Contributors" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "Pillow>=9.0.0",
    "torch>=1.12.0",
    "numpy>=1.21.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"." = ["js/*.js", "zh_cn/*.json", "zh_cn/*.csv"]

[project.urls]
Homepage = "https://github.com/comfyui-extensions/comfyui-danbooru-gallery"
Repository = "https://github.com/comfyui-extensions/comfyui-danbooru-gallery.git"
Issues = "https://github.com/comfyui-extensions/comfyui-danbooru-gallery/issues"
Documentation = "https://github.com/comfyui-extensions/comfyui-danbooru-gallery/blob/main/README.md"
