[project]
name = "HunyuanVideo_Foley"
description = "Generate high-fidelity, synchronized foley audio for any video directly within ComfyUI, powered by Tencent's HunyuanVideo-Foley model."
version = "0.4.2"
license = {file = "LICENSE"}

classifiers = ["Environment :: GPU :: NVIDIA CUDA"]

dependencies = ["diffusers", "timm", "transformers>=4.49.0", "descript-audiotools", "omegaconf"]

[project.urls]
Repository = "https://github.com/BobRandomNumber/ComfyUI-HunyuanVideo_Foley"
"Bug Tracker" = "https://github.com/BobRandomNumber/ComfyUI-HunyuanVideo_Foley/issues"

[tool.comfy]
PublisherId = "bobrandomnumber"

DisplayName = "ComfyUI-HunyuanVideo_Foley"






