[project]
name = "ComfyUI-MelBandRoFormer"
description = "ComfyUI wrapper nodes for WanVideo"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["librosa", "rotary_embedding_torch", "einops"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-MelBandRoFormer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-MelBandRoFormer"
Icon = ""
