[project]
name = "ComfyUI-SCAIL-Pose"
description = "ComfyUI nodes for SCAIL pose input processing"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["taichi >= 1.7.4", "opencv-python", "pillow"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-SCAIL-Pose"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-SCAIL-Pose"
Icon = ""
