[project]
name = "sdpose-ood"
description = "SDPose OOD nodes for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["addict", "albumentations", "configs", "diffusers", "groundingdino-py>=0.4.0", "hydra-core>=1.3.2", "iopath>=0.1.10", "matplotlib>=3.9.1", "#mmcv==2.1.0", "https://archive1.piwheels.org/simple/mmcv/mmcv-2.1.0-py2.py3-none-any.whl#sha256=3b4e4836676290d1f15f0a36b770572e0463024e269c451e48a3686c63c211fb", "mmdet", "mmengine", "munkres", "numpy", "opencv-python>=4.7.0", "pandas", "safetensors", "pillow>=9.4.0", "scipy", "timm", "tqdm>=4.66.1", "#torch", "#torchvision", "ultralytics", "yapf"]

[project.urls]
Repository = "https://github.com/judian17/ComfyUI-SDPose-OOD"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/judian17/ComfyUI-SDPose-OOD/wiki"
"Bug Tracker" = "https://github.com/judian17/ComfyUI-SDPose-OOD/issues"

[tool.comfy]
PublisherId = "judian17"
DisplayName = "ComfyUI-SDPose-OOD"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

