[project]
name = "lhynodes"
description = "Some useful nodes for ComfyUI."
version = "1.1.3"
license = {file = "LICENSE"} 
 classifiers = [
#     # For OS-independent nodes (works on all operating systems)
     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
]

dependencies = ["ultralytics>=8.3.162", "opencv-python", "numpy"]

[project.urls]
Repository = "https://github.com/lihaoyun6/ComfyUI-lhyNodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lihaoyun6/ComfyUI-lhyNodes/wiki"
"Bug Tracker" = "https://github.com/lihaoyun6/ComfyUI-lhyNodes/issues"

[tool.comfy]
PublisherId = "lhy666"
DisplayName = "ComfyUI-lhyNodes"
Icon = "https://avatars.githubusercontent.com/u/16348097"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

