[project]
name = "dynamic-ramcache"
description = "A custom node for ComfyUI that dynamically manages RAM usage by intelligently controlling cache purging based on available system memory."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Windecay/ComfyUI_Dynamic-RAMCache"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Windecay/ComfyUI_Dynamic-RAMCache/wiki"
"Bug Tracker" = "https://github.com/Windecay/ComfyUI_Dynamic-RAMCache/issues"

[tool.comfy]
PublisherId = "windecay"
DisplayName = "ComfyUI_Dynamic-RAMCache"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=0.3.68"  # ComfyUI version compatibility

