[project]
name = "comfyui_nvidia_rtx_nodes"
description = "NVIDIA RTX Nodes for ComfyUI\nThis extension provides GPU-accelerated nodes powered by NVIDIA RTX technology, including RTX Video Super Resolution."
version = "0.1.3"
license = "LICENSE"
dependencies = [
  "nvidia-vfx"
]

[project.urls]
Repository = "https://github.com/Comfy-Org/Nvidia_RTX_Nodes_ComfyUI"

[tool.comfy]
PublisherId = "comfyui"
DisplayName = "ComfyUI_NVIDIA_RTX_Nodes"
Icon = "https://raw.githubusercontent.com/Comfy-Org/Nvidia_RTX_Nodes_ComfyUI/refs/heads/main/icon.png"
