
# pyproject.toml
[project]
name = "wwaa-customnodes" # Unique identifier for your node. Immutable after creation.
description = "Custom Nodes by the team at WeirdWonderfulAI.Art. LineCount, JoinString, Dither Image, Image Batch Loader, Prompt Writer, LLM Prompt To Text File, Advanced Text File Reader, Game Boy Camera Style, Nested Loop Counter, Search and Replace Text, Switch Int, Image Grid, Advanced Image Grid, Image Grid from Index, Before After Animator, Metadata Saver, Image Switcher, JPEG Preview, Save JPEG, Image Dimension Calculator, Image Dimension Size, Text File Browser"
version = "2.16.0" # Custom Node version. Must be semantically versioned.
license = {file = "LICENSE"}
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/hgabha/WWAA-CustomNodes"

[tool.comfy]
PublisherId = "wwaa" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "WWAA-CustomNodes" # Display name for the Custom Node. Can be changed later.
Icon = "https://weirdwonderfulai.art/wp-content/uploads/2022/01/WWAA_logo_trans.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)
